Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98719

QBluetoothSocket deletion occasionally crashes on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.9, 6.2.3, 6.3.0 Alpha
    • 6.2.1
    • None
    • OS: Windows 10 Pro build 19044.1348; Qt 6.2.1
    • Windows
    • 8
    • 79a1523ed6 (qt/qtconnectivity/dev) 79a1523ed6 (qt/tqtc-qtconnectivity/dev) 9ef815af0a (qt/qtconnectivity/6.2) 9ef815af0a (qt/tqtc-qtconnectivity/6.2) 79a1523ed6 (qt/tqtc-qtconnectivity/6.3) 1806578f2e (qt/tqtc-qtconnectivity/5.15)
    • Team 1 Foundation_Sprint 48

      When a QBluetoothSocket which was previously connected is deleted, it seems to be possible that the application occasionally crashes with assertion:

      ASSERT: "false" in file C:\Users\qt\work\qt\qtconnectivity\src\bluetooth\qbluetoothsocket_winrt.cpp, line 206

      It seems that even though SocketWorker::close() in qbluetoothsocket_winrt.cpp cancels the asynchronous read, the SocketWorker::onReadyRead() function may nevertheless get called after the SocketWorker object has already been destroyed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            teijo.kinnunen Teijo Kinnunen
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes