Windows QBluetoothSocket: fix crash at disconnecting

The last onReadyRead callback can come after the object is destroyed.
Protect against it by wrapping 'this' in a QPointer, and checking
the QPointer in the callback.

Fixes: QTBUG-98719
Change-Id: I3d5200e29744012815cd168a340bc617f85c6540
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 79a1523ed6262ccd148173ec8732865c0721063a)
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>